--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "api-server",
+  "name": "lab-19-api-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "![CF](http://i.imgur.com/7v5ASc8.png) LAB-15 =================================================",
   "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
     "start": "node index.js",
     "lint": "eslint **/*.js",
-    "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json",
-    "test": "jest --verbose",
-    "test-watch": "jest --watchAll --verbose"
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage",
+    "jsdoc": "jsdoc -c ./docs/config/jsdoc.config.json"
   },
-  "jest": {
-    "testEnvironment": "node"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/401-advanced-javascript-v/lab-19-api-server.git"
   },
-  "keywords": [],
-  "author": "vanessa",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/401-advanced-javascript-v/lab-19-api-server/issues"
+  },
+  "homepage": "https://github.com/401-advanced-javascript-v/lab-19-api-server#readme",
   "dependencies": {
     "bcrypt": "^3.0.5",
     "uuid": "^3.3.2",
@@ -32,16 +39,5 @@
     "require-directory": "^2.1.1",
     "supertest": "^3.3.0",
     "swagger-ui-express": "^4.0.2"
-  },
-  "directories": {
-    "doc": "docs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/401-advanced-javascript-v/project-15.git"
-  },
-  "bugs": {
-    "url": "https://github.com/401-advanced-javascript-v/project-15/issues"
-  },
-  "homepage": "https://github.com/401-advanced-javascript-v/project-15#readme"
+  }
 }
